# commandspec

./: Cargo.toml  README.md
src/: internals.rs  lib.rs  macros.rs
tests/: all.rs
