[package]
authors = ["Tim Ryan <tim@timryan.org>"]
description = "Rust macro to build std::process::Command objects with shell syntax. Uses macro_rules! and works on stable."
license = "MIT OR Apache-2.0"
name = "commandspec"
repository = "http://github.com/tcr/commandspec"
version = "0.12.2"

[dependencies]
thiserror = "1.0"
anyhow = "1.0"
shlex = "0.1.1"
