[package]
authors = ["Tim Ryan <tim@timryan.org>", "Colin Walters <walters@verbum.org>"]
description = "Rust macro to build std::process::Command objects with shell syntax. Uses macro_rules! and works on stable."
license = "MIT OR Apache-2.0"
name = "sh-inline"
repository = "http://github.com/cgwalters/rust-sh-inline"
version = "0.1.0"

[dependencies]
thiserror = "1.0"
anyhow = "1.0"
shlex = "0.1.1"
