[package]
authors = ["Colin Walters <walters@verbum.org>", "Tim Ryan <tim@timryan.org>"]
description = "Macros to run inline shell (bash) script"
license = "MIT OR Apache-2.0"
name = "sh-inline"
repository = "http://github.com/cgwalters/rust-sh-inline"
version = "0.1.0"
documentation = "http://docs.rs/sh-inline"
homepage = "http://github.com/cgwalters/rust-sh-inline"
keywords = ["subprocess", "macro", "shell"]
readme = "README.md"

[dependencies]
shlex = "0.1.1"
tempfile = "3.1.0"
nix = "0.18.0"
